# washhouse

./: .cursorignore  .gitignore  ADMIN_DASHBOARD_ROOT_CAUSE.md  AGENTS.md  ANNOUNCEMENT_CENTER.md  AUTH_ROOT_CAUSE.md  BUG_LIST.md  BUNDLE_ANALYSIS.md  BUSINESS_HEALTH_DASHBOARD.md  CHAIN_OF_CUSTODY.md  CONNECTIVITY_ROOT_CAUSE.md  CONTRIBUTING.md  CUSTOMER_EXPERIENCE_ENHANCEMENT.md  CUSTOMER_INSIGHTS.md  CUSTOMER_TRUST_SCORE.md  DATABASE_OPTIMIZATION.md  DELIVERY_OTP.md  DELIVERY_PROOF.md  DEMO_ACCOUNTS.md  DESIGN_SYSTEM.md  DISPUTE_ANALYTICS_ROOT_CAUSE.md  DISPUTE_CENTER.md  DISPUTE_DATATABLE_REDESIGN.md  FRAUD_DETECTION_ENGINE.md  FRAUD_PROTECTION_REPORT.md  HYDRATION_AUDIT.md  HYDRATION_RISKS.md  IMPROVEMENT_RECOMMENDATIONS.md  INVENTORY_VERIFICATION.md  LAUNDRY_REVENUE_ANALYTICS.md  MISSING_TEST_DATA.md  OPERATIONS_CENTER.md  PAGINATION_STANDARD.md  PARTNER_DASHBOARD_INVESTIGATION.md  PARTNER_LOGIN_ROOT_CAUSE.md  PARTNER_TRUST_SCORE.md  PERFORMANCE_AUDIT.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_FIXES.md  PERFORMANCE_REPORT.md  (+24 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260529_0001_initial_auth.py  20260601_0002_marketplace_core.py  20260602_0003_performance_indexes.py  20260602_0004_laundry_fulltext_search.py  20260602_0005_laundry_storefront.py  20260603_0006_pickup_evidence.py  20260603_0007_inventory_verification.py  20260603_0008_delivery_otp.py  20260603_0009_delivery_proof.py  20260603_0010_chain_of_custody.py  20260603_0011_dispute_management.py  20260603_0012_customer_trust_score.py  20260603_0013_laundry_trust_score.py  (+21 more)
backend/app/: __init__.py  main.py
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
backend/scripts/: count_db.py  create_admin.py  qa_counts.py  run_dev.ps1  seed.py  seed_qa.py  seed_washhouse_catalog.py  verify_crud_by_role.py
backend/tests/: conftest.py
(+1249 files in other folders)
