[project]
name = "dlm-backend"
version = "0.1.0"
description = "Doorstep Laundry Marketplace — FastAPI backend"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "SIM",              # simplify
  "RUF",              # ruff
  "ASYNC",            # async
  "S",                # bandit-lite
  "DTZ",              # datetime tz
  "TCH",              # type-checking blocks
  "PT",               # pytest style
  "PIE",              # misc
  "PLE", "PLR", "PLW",
]
ignore = [
  "E501",   # line length (formatter handles)
  "S101",   # asserts ok in tests
  "PLR0913", # too many args (FastAPI deps)
  "PLR2004", # magic value (we'll handle case-by-case)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "PLR0915", "PLR2004"]
"alembic/**/*" = ["S", "E501", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: slower integration tests",
  "smoke: smoke tests",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "app/tasks/celery_app.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
